<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <!-- General -->
    <string name="app_name">Boolio</string>

    <!-- Facebook App -->
    <string name="facebook_app_id">952143318149883</string>
    <string name="gcm_project_id">825321258464</string>

    <!-- Mixpanel-->
    <string name="mixpanel_token">729163f26fd10f2f724f263a6d01f0d2</string>

    <!-- Google Android API Key -->
    <string name="google_api_key">AIzaSyDYYgGwy7mEProLithc-fx9aLLfwb2UBY0</string>
    <string name="google_cx_key">007715071266837083845:nqg2-xtnsga</string>
    
    <!-- Content Descriptions -->
    <string name="content_desc_tutorial_image">Fragment tutorial image</string>
    <string name="question_creator_image_description">Image of the creator</string>
    <string name="question_image_description">Image of the question</string>
    <string name="content_desc_nav_bar_button">Navigation Bar Button</string>
    <string name="content_description_header">Header for App</string>
    <string name="content_desc_settings">Settings Button on Profile Page</string>

    <!-- Tutorial -->
    <string name="tutorial_1"><![CDATA[<h1>Welcome!</h1>]]>Swipe to learn more about Boolio.</string>
    <string name="tutorial_2"><![CDATA[<h1>Feedback</h1>]]>Pose any question and get feedback\nfrom your friends and the world.</string>
    <string name="tutorial_3"><![CDATA[<h1>Community</h1>]]>Help the community by answering their questions.\n Boolio populates your feed\n only with what matters to you.</string>
    <string name="get_started">Get Started</string>
    <string name="empty_categories_list">Tags coming soon!</string>
    <!-- Login Fragment -->
    <string name="login_button">Login</string>
    <string name="login_email">email</string>
    <string name="login_password">password</string>
    <string name="login_with_facebook">or Login with</string>
    <string name="login_button_facebook">Sign in with Facebook</string>

    <!-- CreateQuestion Fragment -->
    <string name="loading_picture">Loading Picture …</string>
    <string name="create_question_submit">Send</string>
    <string name="create_question_text_hint">Enter your question</string>
    <string name="create_question_tags_hint">Enter your tags</string>
    <string name="create_question_answer_left_hint">No</string>
    <string name="create_question_answer_right_hint">Yes</string>
    <string name="place_image">Tap to place an image</string>
    <string name="create_question">Create Question</string>

    <!-- Profile Fragment -->
    <string name="answered">ANSWERED</string>
    <string name="asked">ASKED</string>
    <string name="karma">KARMA</string>
    <string name="settings">Settings</string>
    <string name="profile_asked_view_text">ASKED</string>
    <string name="profile_answered_view_text">ANSWERED</string>
    <string name="profile_logo">My Profile</string>
    <string name="my_profile">My Profile</string>

    <!-- Feed Fragment -->
    <string name="empty_feed_message">Great Job! Your question feed is empty. Pull down to see if there are more.</string>
    <string name="content_desc_good_job">good job bear</string>
    <string name="picture">Picture</string>

    <!-- Search Fragment -->
    <string name="search_bar_text">Search</string>
    <string name="search_questions_tab_text">QUESTIONS</string>
    <string name="search_friends_tab_text">FRIENDS</string>
    <string name="search_categories_tab_text">TAGS</string>


    <!-- Warnings -->
    <string name="check_google_play_warning">Please enable Google Play Services to receive notifications about questions!</string>
    <string name="report_title">Report</string>
    <string name="report_message">You are about to mark this question as inappropriate.</string>
    <string name="delete_title">Delete</string>
    <string name="delete_message">You are about to delete this question.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Update App -->
    <string name="update_title">Update</string>
    <string name="update_message">New version of boolio is available. Would you like to update boolio?</string>

    <!-- ScrollListView-->
    <string name="elv_undo">Undo</string>
    <string name="elv_undo_all">Undo All</string>
    <string name="elv_item_deleted">Item deleted</string>
    <string name="elv_n_items_deleted">%1$s items deleted</string>

    <!--Friends Fragment-->
    <string name="friends_title">Friends</string>
    <string name="friend_contacts">Contacts</string>
    <string name="friends_facebook">Facebook</string>
    <string name="invite_button_description">Invite contact</string>
</resources>