<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/login_email"
        android:layout_width="@dimen/login_input_length"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/login_text_padding"
        />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="@dimen/login_input_length"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:padding="@dimen/login_text_padding"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="@dimen/login_input_length"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:theme="@android:style/Theme.Translucent.NoTitleBar" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/login_text_padding"
        android:text="@string/login_with_facebook"/>

</LinearLayout>