<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/header_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/theme_blue"
        android:padding="@dimen/general_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description_header"
            android:src="@drawable/logo_white" />

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/empty_list_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_bar"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/empty_list_image"
            android:layout_width="@dimen/tutorial_image_width"
            android:layout_height="@dimen/tutorial_image_width"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/content_desc_good_job"
            android:padding="@dimen/question_feed_padding"
            android:src="@drawable/constructionbear" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/empty_list_image"
            android:fontFamily="condensed"
            android:gravity="center"
            android:padding="@dimen/question_feed_padding"
            android:text="@string/empty_categories_list"
            android:textSize="@dimen/general_large_text" />
    </RelativeLayout>
</RelativeLayout>