<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/header_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/theme_blue"
        android:padding="@dimen/general_padding">

        <TextView
            style="@style/header_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/friends_title"
            android:textColor="@color/white"
            android:textSize="@dimen/profile_large_size"
            android:textStyle="bold"/>
    </FrameLayout>

    <!-- View Tabs -->
    <LinearLayout
        android:id="@+id/friends_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_bar"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/friend_contacts"
            style="@style/view_pager_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/friend_contacts"/>

        <TextView
            android:id="@+id/friend_facebook"
            style="@style/view_pager_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/friends_facebook"/>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/friends_view_pager"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/friends_tab_layout"/>
</RelativeLayout>