<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/profile_relativelayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/theme_blue">

        <TextView
            android:id="@+id/profile_user_name"
            style="@style/header_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/my_profile"
            android:textColor="@android:color/white"/>

        <ImageView
            android:id="@+id/profile_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/content_desc_settings"
            android:scaleType="fitCenter"
            android:src="@drawable/settings"/>

    </RelativeLayout>

    <!-- PROFILE -->
    <RelativeLayout
        android:id="@+id/profile_karma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_bar"
        android:background="@android:color/white"
        android:padding="@dimen/profile_padding">

        <io.boolio.android.custom.BoolioProfileImage
            android:id="@+id/profile_user_image"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:layout_alignParentLeft="true"
            android:background="@drawable/default_profile"/>

        <LinearLayout
            android:id="@+id/karma_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:orientation="horizontal"
            android:padding="@dimen/general_padding">

            <!-- ASKED -->
            <TextView
                android:id="@+id/asked_count"
                style="@style/profile_medium_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/general_padding"
                android:textStyle="normal"/>

            <!-- KARMA -->
            <TextView
                android:id="@+id/karma_count"
                style="@style/profile_large_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/general_padding"
                android:textSize="@dimen/profile_large_size"
                android:textStyle="bold"/>

            <!-- ANSWERED -->
            <TextView
                android:id="@+id/answered_count"
                style="@style/profile_medium_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/general_padding"
                android:textStyle="normal"/>
        </LinearLayout>

        <TextView
            android:id="@+id/profile_username"
            style="@style/profile_medium_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/karma_bar"
            android:layout_toRightOf="@+id/profile_user_image"
            android:ellipsize="end"
            android:padding="@dimen/general_padding"/>

    </RelativeLayout>

    <!-- TABS -->
    <LinearLayout
        android:id="@+id/asked_answered_view_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:layout_below="@id/profile_karma"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/profile_asked_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/profile_asked_answered_padding"
            android:text="@string/profile_asked_view_text"
            android:background="@color/white"
            android:textColor="@color/feed_question_left"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>
        <TextView
            android:id="@+id/profile_answered_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/profile_asked_answered_padding"
            android:text="@string/profile_answered_view_text"
            android:background="@color/tab_light_gray"
            android:textColor="@color/white"/>
    </LinearLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/asked_answered_view_pager"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/asked_answered_view_layout"/>

    <!-- HIDDEN VIEW -->
    <RelativeLayout
        android:id="@+id/karma_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_karma"
        android:background="@color/dark_gray"
        android:padding="@dimen/general_padding"
        android:visibility="gone">


        <!-- KARMA -->
        <LinearLayout
            android:id="@+id/karma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/profile_score_margin"
            android:layout_marginRight="@dimen/profile_score_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/profile_medium_text_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/karma"/>

            <TextView
                android:id="@+id/karma_count_in"
                style="@style/profile_medium_text_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"/>
        </LinearLayout>

        <!-- ASKED -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@id/karma"
            android:layout_marginLeft="@dimen/profile_score_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/profile_medium_text_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asked"/>

            <TextView
                android:id="@+id/asked_count_in"
                style="@style/profile_medium_text_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"/>
        </LinearLayout>


        <!-- ANSWERED -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/karma"
            android:layout_marginRight="@dimen/profile_score_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/profile_medium_text_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answered"/>

            <TextView
                android:id="@+id/answered_count_in"
                style="@style/profile_medium_text_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>